<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.artisan.ArtisanInfo">

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cover_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.0"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/circle_bg"
        android:contentDescription="@string/avatar_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover_image"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/avatar_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/linear_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp">
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/edittext_background"
                android:elevation="3dp"
                android:hint="@string/hintInpUserArtisan"
                android:inputType="text"
                android:paddingVertical="18dp"
                android:paddingStart="16dp"
                android:paddingEnd="32dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:autofillHints="username" />
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_label"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp" />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/edittext_background"
                android:elevation="3dp"
                android:hint="@string/hintInpPhone"
                android:inputType="phone"
                android:paddingVertical="18dp"
                android:paddingStart="16dp"
                android:paddingEnd="32dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:autofillHints="phone" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp" />
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/edittext_background"
                android:elevation="3dp"
                android:hint="@string/inpEmailText"
                android:inputType="textEmailAddress"
                android:paddingVertical="18dp"
                android:paddingStart="16dp"
                android:paddingEnd="32dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:autofillHints="emailAddress" />
            <TextView
                android:id="@+id/tv_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name_label"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp" />
            <EditText
                android:id="@+id/et_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/edittext_background"
                android:elevation="3dp"
                android:hint="@string/hintInpStoreOrBrand"
                android:inputType="text"
                android:paddingVertical="18dp"
                android:paddingStart="16dp"
                android:paddingEnd="32dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="Autofill" />
            <TextView
                android:id="@+id/tv_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduce_label"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" />
            <EditText
                android:id="@+id/et_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/edittext_background"
                android:elevation="3dp"
                android:gravity="top|start"
                android:hint="@string/hintInpIntroduce"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="5"
                android:paddingVertical="18dp"
                android:paddingStart="16dp"
                android:paddingEnd="32dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:autofillHints="username" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/scroll_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="40dp"
        android:layout_height="37dp"
        android:layout_marginTop="-28dp"
        android:background="@drawable/circle_purple"
        android:contentDescription="@string/edit"
        android:elevation="4dp"
        android:src="@drawable/ic_edit_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_image"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_avatar_hint"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:background="@drawable/circle_gray_overlay"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/avatar_image"
        app:layout_constraintBottom_toBottomOf="@id/avatar_image"
        app:layout_constraintStart_toStartOf="@id/avatar_image"
        app:layout_constraintEnd_toEndOf="@id/avatar_image" />

    <TextView
        android:id="@+id/tv_cover_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/cover_hint"
        android:textColor="@color/red"
        android:textSize="13sp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/cover_image"
        app:layout_constraintEnd_toEndOf="@id/cover_image" />

    <!-- ...other UI elements... -->

</androidx.constraintlayout.widget.ConstraintLayout>