<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.artisan.AddProduct">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_add_product_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/add_product"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/addPic"
        android:layout_width="155dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/input_picture_register_artisan"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="29dp"
            android:contentDescription="@string/desc_register_artisan_image"
            app:srcCompat="@drawable/ic_register_artisan_plus" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="81dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/add_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fieldsContainer"
        android:layout_width="402dp"
        android:layout_height="483dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/editTextProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edittext_background"
            android:elevation="3dp"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:autofillHints="username"
            android:hint="@string/product_name"
            android:inputType="text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce_label" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edittext_background"
            android:elevation="3dp"
            android:gravity="top|start"
            android:lines="3"
            android:maxLines="3"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:autofillHints="username"
            android:hint="@string/introduce_label"
            android:inputType="text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edittext_background"
            android:elevation="3dp"
            android:inputType="numberDecimal"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:autofillHints="username"
            android:hint="@string/product_price"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_title" />

        <AutoCompleteTextView
            android:id="@+id/editTextCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edittext_background"
            android:elevation="3dp"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/category_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity" />

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edittext_background"
            android:elevation="3dp"
            android:inputType="number"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:autofillHints="username"
            android:hint="@string/product_quantity"
            />
    </LinearLayout>

    <Button
        android:id="@+id/addProductButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="@color/btnColorPurple"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldsContainer" />

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/contDesImageItem"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/addPic"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

</androidx.constraintlayout.widget.ConstraintLayout>