<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.forgotpassword.resetpassword.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:layout_marginTop="150dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/reset_password_title"/>

        <EditText
            android:id="@+id/edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edit_background"
            android:hint="@string/edit_new_password"
            android:inputType="textPassword"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:inputType="textPassword"
            android:background="@drawable/edit_background"
            android:hint="@string/edit_confirm_password"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_submit"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>